# serenity-bot-template

./: .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs  prelude.rs
src/checks/: mod.rs
src/commands/: general.rs  mod.rs  owner.rs
