[package]
name = "serenity-template"
version = "0.1.0"
authors = ["Owen Salter <owen@devosmium.xyz>"]
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
description = "A General-Purpose Discord bot"
keywords = ["discord", "bot"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

kankyo = "0.3"
env_logger = "0.7.1"
log = "0.4.8"
tokio = { version = "0.2", features = ["macros"] }
serde = { version = "1", features = ["derive"]}

[dependencies.serenity]
version = "0.9.0-rc.0"
default-features = true
features = [
    "builder",
    "client",
    "framework",
    "model",
    "cache",
    "standard_framework",
    "utils",
    "rustls_backend"
]
